--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AMD_FSR)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AMD_FSR main.cpp Core/FSR.cpp Core/FSR.h)
+add_executable(AMD_FSR main.cpp Core/FSR.cpp Core/FSR.h Core/Point.cpp Core/Point.h Core/CommonProperty.cpp Core/CommonProperty.h)
